--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -149,14 +149,14 @@ body.dark .btn {
 }
 
 .form {
-  background-color: var(--white);
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	padding: 0 3rem;
-	height: 100%;
-	text-align: center;
+  background-color: var(--bgform-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 3rem;
+  height: 100%;
+  text-align: center;
 }
 
 .form__title {
