--- a/src/components/Auth/ForgotPassword.css
+++ b/src/components/Auth/ForgotPassword.css
@@ -6,6 +6,7 @@
   --gray: #333;
   --blue: #1a9ff1;
   --lightblue: #088abd;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
 
   /* RADII */
   --button-radius: 0.7rem;
