--- a/src/components/Auth/SignUp.css
+++ b/src/components/Auth/SignUp.css
@@ -1,4 +1,7 @@
 /* src/components/Auth/SignUp.css */
+:root{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+}
 .container__form.container--signup {
   left: 0;
 	opacity: 0;
