--- a/src/components/UserProfile/SidebarMenu.module.css
+++ b/src/components/UserProfile/SidebarMenu.module.css
@@ -79,16 +79,15 @@
   list-style: none;
   padding: 0;
   margin: 0;
-  padding-bottom: 80px;
  }
 
 .menuItem {
-  padding: 24px 0 24px 18px !important;
-  margin-bottom: 18px !important;
-  min-height: 56px;
+
   display: flex;
   align-items: center;
-  font-size: 1.18rem;
+  font-size: 16px;
+  padding: 15px 20px;
+
   color: var(--LightDarktext-color);
   text-decoration: none;
   border-bottom: 1px solid #eee;
