--- a/src/services/chatbot/Chatbot.module.css
+++ b/src/services/chatbot/Chatbot.module.css
@@ -6,12 +6,12 @@
   bottom: 30px;
   right: 30px;
   z-index: 1000;
-  --taier-logo:url("/assets/Asset\ 22@2x.png");
-  --chatbot-logo:url("/assets/chatbot.png");
+  --taier-logo:url("../../assets/Asset\ 22@2x.png");
+  --chatbot-logo:url("../../assets/chatbot.png");
 }
 .chatbotContainer.dark {
-  --taier-logo:url("/assets/Asset\ 24@2x.png");
-  --chatbot-logo:url("/assets/chatbot-dark.png");
+  --taier-logo:url("../../assets/Asset\ 24@2x.png");
+  --chatbot-logo:url("../../assets/chatbot-dark.png");
 }
 
 .chatbotButton {
@@ -110,7 +110,7 @@
   flex-shrink: 0;
 }
 .userLogo{
-  background-image: url("/assets/Asset\ 18@2x.png");
+  background-image: url("../../assets/Asset\ 18@2x.png");
 }
 .aiLogo{
   background-image: var(--chatbot-logo);
