--- a/src/pages/SelectedFlights/styles/main.module.css
+++ b/src/pages/SelectedFlights/styles/main.module.css
@@ -25,6 +25,7 @@
   border: 1px solid rgb(216, 220, 222);
   padding-top: 20px;
   border-radius: 12px;
+  min-width: 785px;
 }
 .groupedFlight .showBtn {
   width: 100%;
