--- a/src/pages/SelectedFlights/styles/sidebar.module.css
+++ b/src/pages/SelectedFlights/styles/sidebar.module.css
@@ -16,7 +16,10 @@
   position: sticky;
   top: 0px;
   height: max-content;
-  transition: top 0.3s ease-in-out;
+  transition: top 0.4s ease;
+}
+.hidden {
+  top: -200px !important;
 }
 .side-bar h2 {
   font-size: 1.25rem; /*cards title (sort by and filters)*/
