--- a/src/components/currency/currency.module.css
+++ b/src/components/currency/currency.module.css
@@ -18,30 +18,38 @@
     cursor: pointer;
 }
 .listContainer{
+    --bg:var(--bg-color);
+    --color: var(--DarkyellowText-color);
+    --hover-bg:#E0E0E0;
+    --border-color:#9E9E9E;
     position: absolute;
-    top: 55px;
-    right: 320px;
-    background-color: white;
+    background-color: var(--bg);
+    color: var(--color);
     z-index: 50;
-    border: 1px solid #9E9E9E;
+    border: 1px solid var(--border-color);
     border-radius: 5px;
 }
+.listContainer.dark{
+    --hover-bg:#3e3e41;
+    --border-color: #3e3e41;
+}
+
 .listContainer div+div{
     margin-top: 5px;
 }
 .listContainer div:hover {
-    background-color: #E0E0E0;
+    background-color: var(--hover-bg);
     cursor: pointer;
 }
 .listContainer div {
     padding:7px 10px;
 }
 .container{
-    position: absolute;
-    width: 100%;
+    position: fixed;
+    width: 100vw;
     top: 0;
     left: 0;
-    height: 100%;
+    height: 100vh;
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: 35;
+    z-index: 70;
 }
