--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,8 @@ body {
   background-color:var(--bg-color);
   color: #000000;
   width: 100%;
-  max-width: 100vw;
   overflow-x: hidden;
   -webkit-tap-highlight-color: transparent;
-  height: 100vh;
   
 
 }
@@ -72,8 +70,14 @@ html {
   --notification-border: #2196f3;
   --notification-text: #1565c0;
   --notification-id: #888;
-
+  --border-color:rgba(0,0,0,0.2);
+  --title-color:#333;
+  --hover-bg:#E0E0E0;
+  --hover-date-bg:white;
     font-synthesis: none;
+    --inRange-day:#e6f2ff;
+    --showBtn-bg:#EEEEEE;
+    --plusTime--bg:black;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -81,6 +85,13 @@ html {
 
 
 body.dark {
+  --plusTime--bg:#fbd684;
+  --showBtn-bg:#424242;
+  --hover-bg:#3e3e41;
+  --inRange-day:#d4960c;
+  --hover-date-bg:#3e3e41;
+  --title-color:#ffb000;
+  --border-color: #3e3e41;
   --bgform-color: #2a2a2a;
   --AuthBtn-color : #fbd684 ;
   --bg-color: #222127;     
