--- a/src/pages/Home/FlightSearchForm.module.css
+++ b/src/pages/Home/FlightSearchForm.module.css
@@ -1,10 +1,9 @@
-
 /* src/components/FlightSearchForm.module.css */
 .flyFormContainer {
   position: absolute;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color:var(--bg-color);
+  background-color: var(--bg-color);
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
@@ -15,7 +14,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color:var(--bg-color);
+  background-color: var(--bg-color);
   padding: 2rem;
   border-radius: 8px;
   max-width: fit-content;
@@ -46,7 +45,7 @@
   display: flex;
   align-items: center;
 }
-.inputContainer:last-child{
+.inputContainer:last-child {
   width: 260px;
   height: 75px;
 }
@@ -62,7 +61,7 @@
   width: 260px;
   height: 75px;
   padding: 8px 35px;
-  border: 1px solid #ccc;
+  border: 1px solid var(--border-color);
   border-radius: 5px;
   font-size: 16px;
   white-space: normal !important;
@@ -72,8 +71,8 @@
   color: var(--Darktext-color);
   font-size: 14px;
   font-weight: 500;
-  background-color:var(--bg-color);
-  font-family: 'Inter', sans-serif;
+  background-color: var(--bg-color);
+  font-family: "Inter", sans-serif;
   margin-top: 5px;
 }
 
@@ -85,12 +84,12 @@
   border-color: #007bff;
   box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
 }
-.baseInput:focus:invalid{
+.baseInput:focus:invalid {
   border-color: red;
 }
-.invalid:focus{
+.invalid:focus {
   border-color: red;
-  box-shadow: 0 0 5px rgb(255 87 34 / 38%)
+  box-shadow: 0 0 5px rgb(255 87 34 / 38%);
 }
 input[type="date"]::-webkit-calendar-picker-indicator {
   display: block;
@@ -119,25 +118,13 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   font-size: 20px;
   line-height: 24px;
   font-weight: 300;
-  font-family: 'Inter', sans-serif;
-  
+  font-family: "Inter", sans-serif;
 }
 
 .flights:hover {
   background-color: #0056b3;
 }
-.passengerClassContainer {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  z-index: 1000;
-  background: white;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  padding: 1rem;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  min-width: 250px;
-}
+
 .error {
   color: red;
   position: absolute;
