--- a/src/pages/SelectedFlights/styles/mainHeader.module.css
+++ b/src/pages/SelectedFlights/styles/mainHeader.module.css
@@ -11,13 +11,13 @@
   --text-padding: 5px;
   --border-width: 1px;
   position: fixed;
-  background-color: white;
+  background-color: var(--bg-color);
   z-index: 30;
   margin: 0 auto;
   width: 100%;
   padding-top: 5px;
   padding-bottom: 10px;
-  border-bottom: 1px solid rgb(216, 220, 222);
+  border-bottom: 1px solid var(--border-color);
 }
 .main-header-container select {
   display: inline-block;
@@ -40,7 +40,7 @@
   height: 75px;
   padding: 8px 35px;
   padding-right: 10px;
-  border: 1px solid #ccc;
+  border: 1px solid var(--border-color);
   border-radius: 5px;
   font-size: 16px;
   white-space: normal !important;
@@ -79,21 +79,13 @@
   border-radius: 18px;
   border: 0px;
 }
+.form-submit button svg {
+  fill :var(--LightText-color);
+}
 .form-submit button:hover {
   cursor: pointer;
 }
-.passengerClassContainer {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  z-index: 1000;
-  background: white;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  padding: 1rem;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  min-width: 250px;
-}
+
 .passengerContainer,.from,.to,.calender{
   position: relative;
 }
