--- a/src/pages/SelectedFlights/styles/sidebar.module.css
+++ b/src/pages/SelectedFlights/styles/sidebar.module.css
@@ -147,6 +147,7 @@ hr {
     vertical-align: -7px;
     margin-right: 10px;
     margin-left: 5px;
+    background-color: white;
 }
 .airlineInput{
   margin-top: 10px;
