removing sort and adding price filtering to filters

--- a/src/pages/SelectedFlights/styles/container.module.css
+++ b/src/pages/SelectedFlights/styles/container.module.css
@@ -2,9 +2,10 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 .container {
-  padding-top: 79px;
+  padding-top: 78px;
   font-family:
     Inter, system-ui, Avenir, Helvetica, Arial, sans-serif !important;
+    position: relative;
   --skeletonLoadingGradientWidth: 1200px;
   --skeletonLoadingGradient: linear-gradient(
     to right,
